Remove GELF
Closes #27365

Signed-off-by: Václav Muzikář <vmuzikar@redhat.com>